--- a/Anime.css
+++ b/Anime.css
@@ -283,7 +283,7 @@ simple rule of add = #more {background-image: url();}
 #more10080 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/30030.jpg);}
 #more10049 {background-image: url(http://cdn.myanimelist.net/images/anime/12/30111.jpg);}
 #more8740 {background-image: url(http://cdn.myanimelist.net/images/anime/2/24152.jpg);}
-#more6211 {background-image: url(http://cdn.myanimelist.net/images/anime/10/13776.jpg);}
+#more6211 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/13776.jpg);}
 #more6171 {background-image: url(http://cdn.myanimelist.net/images/anime/5/29590.jpg);}
 #more4059 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/19620.jpg);}
 #more4053 {background-image: url(http://cdn.myanimelist.net/images/anime/9/7525.jpg);}
@@ -1134,7 +1134,7 @@ simple rule of add = #more {background-image: url();}
 #more64 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/15728.jpg);}
 #more59 {background-image: url(http://cdn.myanimelist.net/images/anime/4/24648.jpg);}
 #more27601 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/66827.jpg);}
-#more25835 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/68021.jpg);}
+#more25835 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1835/91537.jpg);}
 #more23319 {background-image: url(http://cdn.myanimelist.net/images/anime/10/67547.jpg);}
 #more19251 {background-image: url(http://cdn.myanimelist.net/images/anime/9/56553.jpg);}
 #more16009 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/52127.jpg);}
@@ -8126,7 +8126,7 @@ simple rule of add = #more {background-image: url();}
 #more28771 {background-image: url(http://cdn.myanimelist.net/images/anime/11/70437.jpg);}
 #more28765 {background-image: url(http://cdn.myanimelist.net/images/anime/7/69419.jpg);}
 #more28759 {background-image: url(http://cdn.myanimelist.net/images/anime/9/69663.jpg);}
-#more28755 {background-image: url(http://cdn.myanimelist.net/images/anime/6/69891.jpg);}
+#more28755 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/78280.jpg);}
 #more28749 {background-image: url(http://cdn.myanimelist.net/images/anime/12/69389.jpg);}
 #more28735 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/77907.jpg);}
 #more28733 {background-image: url(http://cdn.myanimelist.net/images/anime/12/69363.jpg);}
@@ -10824,4 +10824,16 @@ simple rule of add = #more {background-image: url();}
 #more33489 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83934.jpg);}
 #more35120 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89973.jpg);}
 #more35330 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88816.jpg);}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
 #more {background-image: url();}
