--- a/Anime.css
+++ b/Anime.css
@@ -10824,12 +10824,32 @@ simple rule of add = #more {background-image: url();}
 #more33489 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83934.jpg);}
 #more35120 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89973.jpg);}
 #more35330 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88816.jpg);}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
+#more38101 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1898/93324.jpg);}
+#more36649 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88582.jpg);}
+#more35821 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1819/92602.jpg);}
+#more37347 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1188/90658.jpg);}
+#more37349 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1949/93415.jpg);}
+#more37105 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1679/90825.jpg);}
+#more37154 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1258/90170.jpg);}
+#more37259 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1288/93432.jpg);}
+#more37141 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1620/90143.jpg);}
+#more37446 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1420/92951.jpg);}
+#more37210 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1649/93412.jpg);}
+#more38080 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1801/93272.jpg);}
+#more35677 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1148/90960.jpg);}
+#more37232 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1818/93386.jpg);}
+#more37926 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1899/93046.jpg);}
+#more37983 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1716/93183.jpg);}
+#more37919 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1180/93009.jpg);}
+#more38082 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1848/93273.jpg);}
+#more36632 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1258/93294.jpg);}
+#more37450 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1274/93417.jpg);}
+#more37449 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1545/93427.jpg);}
+#more36817 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1675/93146.jpg);}
+#more37569 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1933/91326.jpg);}
+#more36653 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1994/93381.jpg);}
+#more36510 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1711/93328.jpg);}
+#more37779 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1733/93120.jpg);}
 #more {background-image: url();}
 #more {background-image: url();}
 #more {background-image: url();}
