--- a/Anime.css
+++ b/Anime.css
@@ -812,7 +812,7 @@ simple rule of add = #more {background-image: url();}
 #more17 {background-image: url(http://cdn.myanimelist.net/images/anime/12/49655.jpg);}
 #more24641 {background-image: url(http://cdn.myanimelist.net/images/anime/4/63429.jpg);}
 #more20785 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/61039.jpg);}
-#more11743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/42619.jpg);}
+#more11743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1885/93861.jpg);}
 #more10573 {background-image: url(http://cdn.myanimelist.net/images/anime/8/29026.jpg);}
 #more9136 {background-image: url(http://cdn.myanimelist.net/images/anime/7/26664.jpg);}
 #more8426 {background-image: url(http://cdn.myanimelist.net/images/anime/13/53945.jpg);}
@@ -10514,7 +10514,7 @@ simple rule of add = #more {background-image: url();}
 #more31297 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/78666.jpg);}
 #more30514 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/73095.jpg);}
 #more30296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/76493.jpg);}
-#more30484 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/73480.jpg);}
+#more30484 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1768/93520.jpg);}
 #more30458 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/76048.jpg);}
 #more31324 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/75328.webp);}
 #more31368 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/75439.jpg);}
@@ -10632,7 +10632,7 @@ simple rule of add = #more {background-image: url();}
 #more33203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/85350.jpg);}
 #more32948 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79047.webp);}
 #more33743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83735l.jpg);}
-#more33012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1319/92145.jpg);}
+#more33012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1704/93937.jpg);}
 #more32281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/87048.jpg);}
 #more31798 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/78466.webp);}
 #more32937 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82521.webp);}
@@ -10643,10 +10643,10 @@ simple rule of add = #more {background-image: url();}
 #more32900 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/85524.jpg);}
 #more33487 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/80599.webp);}
 #more32698 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83661.jpg);}
-#more33724 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83109.webp);}
+#more33724 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1085/93874.jpg);}
 #more33674 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86785.jpg);}
 #more32962 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81186.webp);}
-#more34134 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82141.webp);}
+#more34134 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1797/93459.jpg);}
 #more34161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87759.jpg);}
 #more33091 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/80753.webp);}
 #more30695 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/81036.webp);}
@@ -10747,10 +10747,10 @@ simple rule of add = #more {background-image: url();}
 #more35851 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/89556.jpg);}
 #more35905 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/89979.jpg);}
 #more35466 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1566/91061.jpg);}
-#more35835 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/86627.jpg);}
+#more35835 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1018/93832.jpg);}
 #more35062 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88476.jpg);}
-#more35968 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86933.jpg);}
-#more35790 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87142.jpg);}
+#more35968 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1864/93518.jpg);}
+#more35790 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1659/93564.jpg);}
 #more36106 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/89417.jpg);}
 #more35589 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1143/91358.jpg);}
 #more35994 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1786/91257.jpg);}
@@ -10759,39 +10759,39 @@ simple rule of add = #more {background-image: url();}
 #more34383 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/86667.jpg);}
 #more33095 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/82947.jpg);}
 #more36039 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/87604.jpg);}
-#more32827 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87125.jpg);}
-#more34443 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1995/91042.jpg);}
+#more32827 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1564/90469.jpg);}
+#more34443 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1979/93135l.jpg);}
 #more34572 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/88336.jpg);}
 #more36144 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/87620.jpg);}
 #more34542 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/88471.jpg);}
 #more35639 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88234.jpg);}
 #more36098 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/90070.jpg);}
 #more36027 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88190.jpg);}
-#more36432 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1307/93413.jpg);}
+#more36432 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1583/93857.jpg);}
 #more35076 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/87684.jpg);}
-#more36296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1943/91370.jpg);}
+#more36296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1580/93526.jpg);}
 #more35241 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88431.jpg);}
 #more35484 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/88433.jpg);}
 #more36316 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1629/91971.jpg);}
 #more36474 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1841/91357.jpg);}
 #more36475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88110.jpg);}
-#more36407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/87855.jpg);}
-#more36511 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1840/92520.jpg);}
+#more36407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1398/94615.jpg);}
+#more36511 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1314/93524.jpg);}
 #more35376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/89671.jpg);}
 #more35788 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86603.jpg);}
 #more36525 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1801/90264.jpg);}
 #more36220 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88425.jpg);}
 #more34438 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/87709.jpg);}
 #more34439 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87904.jpg);}
-#more36563 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1427/91055.jpg);}
-#more34281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/88545.jpg);}
+#more36563 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1958/93533.jpg);}
+#more34281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1189/93528.jpg);}
 #more35000 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87158.jpg);}
 #more36633 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/88526.jpg);}
 #more36548 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/89987.jpg);}
 #more36688 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1110/91029.jpg);}
 #more36397 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/88806.jpg);}
 #more36864 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89182.jpg);}
-#more36726 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/88802.jpg);}
+#more36726 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1483/93141.jpg);}
 #more35839 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/89879.jpg);}
 #more36793 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1806/90190.jpg);}
 #more36652 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1184/90334.jpg);}
@@ -10808,7 +10808,7 @@ simple rule of add = #more {background-image: url();}
 #more35557 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88293.jpg);}
 #more34451 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88282.jpg);}
 #more37711 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1298/91812.jpg);}
-#more37377 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1455/91746.jpg);}
+#more37377 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1348/92408.jpg);}
 #more37675 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1319/91709.jpg);}
 #more37492 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1197/92518.jpg);}
 #more37799 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1570/92100.jpg);}
@@ -10825,12 +10825,12 @@ simple rule of add = #more {background-image: url();}
 #more35120 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89973.jpg);}
 #more35330 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88816.jpg);}
 #more38101 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1898/93324.jpg);}
-#more36649 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88582.jpg);}
+#more36649 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1443/93470.jpg);}
 #more35821 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1819/92602.jpg);}
 #more37347 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1188/90658.jpg);}
 #more37349 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1949/93415.jpg);}
 #more37105 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1679/90825.jpg);}
-#more37154 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1258/90170.jpg);}
+#more37154 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1893/93447.jpg);}
 #more37259 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1288/93432.jpg);}
 #more37141 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1620/90143.jpg);}
 #more37446 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1420/92951.jpg);}
@@ -10842,14 +10842,39 @@ simple rule of add = #more {background-image: url();}
 #more37983 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1716/93183.jpg);}
 #more37919 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1180/93009.jpg);}
 #more38082 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1848/93273.jpg);}
-#more36632 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1258/93294.jpg);}
-#more37450 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1274/93417.jpg);}
+#more36632 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1410/93920.jpg);}
+#more37450 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1301/93586.jpg);}
 #more37449 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1545/93427.jpg);}
 #more36817 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1675/93146.jpg);}
 #more37569 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1933/91326.jpg);}
 #more36653 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1994/93381.jpg);}
 #more36510 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1711/93328.jpg);}
-#more37779 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1733/93120.jpg);}
+#more37779 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1111/93561.jpg);}
+#more37989 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1880/93189.jpg);}
+#more37520 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1576/91208.jpg);}
+#more37999 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1206/93944.jpg);}
+#more37510 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1793/93254.jpg);}
+#more37202 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1268/93613.jpg);}
+#more36286 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1532/93563.jpg);}
+#more37221 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1416/91403.jpg);}
+#more37430 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1694/93337.jpg);}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
 #more {background-image: url();}
 #more {background-image: url();}
 #more {background-image: url();}
